Ahora los estilos no se salen del section

--- a/Honcizek/Views/Administrador/Clientes/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Honcizek.DAL.Models.Clientes
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>Clientes</h4>
+<h4>Cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -105,8 +105,8 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="pb-3">
+    <a asp-action="Index">Volver al listado</a>
 </div>
 
 @section Scripts {
