--- a/Honcizek/wwwroot/css/Administrador.css
+++ b/Honcizek/wwwroot/css/Administrador.css
@@ -1,4 +1,4 @@
-﻿html, body {
+﻿/*html, body {
     height: 100%;
     margin: 0;
     min-height: 100vh;
@@ -15,16 +15,19 @@ header .left-side {
     display: table-cell;
     background-color: #001059;
     min-width: 20vh;
-    width: 10%;
+    width: 10vh;
     height: inherit;
 }
 
+header .left-side img{
+    width: 10vh;
+}
+
 aside {
-    background-color: #0B1D6E;
-    height: 100%;
+    background-color: #0B1D6E;;
     min-height: 100%;
     min-width: 20vh;
-    width: 10%;
+    width: 10vh;
     position: relative;
 }
 
@@ -33,18 +36,19 @@ aside .menu-option{
     padding: 10%;
 }
 
-aside .menu-option:hover {
-    background-color: #001059;
-    color: #1565C0;
-    cursor: pointer;
-}
+    aside .menu-option:hover {
+        background-color: #001059;
+        color: #1565C0;
+        cursor: pointer;
+        text-decoration: none;
+    }
 
     aside a .menu-option a{
         color: inherit;
         text-decoration: none;
     }
 
-    aside a:hover .menu-option span {
+    aside a:hover{
         color: inherit;
         text-decoration: none;
     }
@@ -73,3 +77,103 @@ display: table-cell;
     width: auto;
     height: inherit;
 }
+
+*/
+html, body {
+    height: 100%;
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    height: 10vh;
+    display: table;
+}
+
+    header .left-side {
+        display: table-cell;
+        background-color: #001059;
+        min-width: 20vh;
+        width: 20vh;
+        height: inherit;
+    }
+
+    header img{
+        width: 15vh;
+    }
+
+aside {
+    background-color: #0B1D6E;
+    height: 100%;
+    min-height: 100%;
+    min-width: 20vh;
+    width: 10%;
+    position: relative;
+}
+
+    aside .menu-option {
+        color: white;
+        padding: 10%;
+    }
+
+        aside .menu-option:hover {
+            background-color: #001059;
+            color: #1565C0;
+            cursor: pointer;
+        }
+
+    aside a .menu-option a {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    aside a:hover .menu-option span {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    aside a .menu-option span {
+        vertical-align: middle;
+    }
+
+.main {
+    min-height: 90%;
+    background-color: #F7F8FC;
+}
+
+.content {
+    background-color: #F7F8FC;
+    min-height: 100%;
+}
+
+section{
+    width:100%;
+    overflow: auto;
+    max-height: 93%;
+    padding-left: 2vh;
+}
+
+@media screen and (max-height: 710px) {
+    section{
+        max-height: 90.7%;
+    }
+}
+
+    .container {
+        max-width: 100%;
+    }
+
+    footer {
+        position: relative;
+        background-color: #F7F8FC;
+    }
+
+
+    header .rest-header {
+        display: table-cell;
+        background-color: #fff;
+        width: auto;
+        height: inherit;
+    }
