--- a/Honcizek/Views/Administrador/Clientes/Create.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Create.cshtml
@@ -4,105 +4,115 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear nuevo cliente</h1>
 
-<h4>Clientes</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Login" class="control-label"></label>
-                <input asp-for="Login" class="form-control" />
-                <span asp-validation-for="Login" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Login" class="control-label"></label>
+                    <input asp-for="Login" class="form-control" />
+                    <span asp-validation-for="Login" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Clave" class="control-label"></label>
+                    <input asp-for="Clave" class="form-control" />
+                    <span asp-validation-for="Clave" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="FechaRegistro" class="control-label"></label>
+                    <input asp-for="FechaRegistro" class="form-control" />
+                    <span asp-validation-for="FechaRegistro" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" />
-                <span asp-validation-for="Clave" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="PaisId" class="control-label">Pais</label>
+                    <select asp-for="PaisId" class="form-control" asp-items="ViewBag.PaisId"></select>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="ProvinciaId" class="control-label">Provincia</label>
+                    <select asp-for="ProvinciaId" class="form-control" asp-items="ViewBag.ProvinciaId"></select>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="LocalidadId" class="control-label">Localidad</label>
+                    <select asp-for="LocalidadId" class="form-control" asp-items="ViewBag.LocalidadId"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="LocalidadId" class="control-label"></label>
-                <select asp-for="LocalidadId" class ="form-control" asp-items="ViewBag.LocalidadId"></select>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Tipo" class="control-label"></label>
+                    <select asp-for="Tipo" class="form-control" asp-items="ViewBag.Tipo"></select>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="RazonSocial" class="control-label"></label>
+                    <input asp-for="RazonSocial" class="form-control" />
+                    <span asp-validation-for="RazonSocial" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ProvinciaId" class="control-label"></label>
-                <select asp-for="ProvinciaId" class ="form-control" asp-items="ViewBag.ProvinciaId"></select>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Apellidos" class="control-label"></label>
+                    <input asp-for="Apellidos" class="form-control" />
+                    <span asp-validation-for="Apellidos" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Nifcif" class="control-label"></label>
+                    <input asp-for="Nifcif" class="form-control" />
+                    <span asp-validation-for="Nifcif" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Telefono" class="control-label"></label>
+                    <input asp-for="Telefono" class="form-control" />
+                    <span asp-validation-for="Telefono" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="PaisId" class="control-label"></label>
-                <select asp-for="PaisId" class ="form-control" asp-items="ViewBag.PaisId"></select>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Movil" class="control-label"></label>
+                    <input asp-for="Movil" class="form-control" />
+                    <span asp-validation-for="Movil" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Direccion" class="control-label"></label>
+                    <input asp-for="Direccion" class="form-control" />
+                    <span asp-validation-for="Direccion" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="FechaRegistro" class="control-label"></label>
-                <input asp-for="FechaRegistro" class="form-control" />
-                <span asp-validation-for="FechaRegistro" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Cp" class="control-label"></label>
+                    <input asp-for="Cp" class="form-control" />
+                    <span asp-validation-for="Cp" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Observaciones" class="control-label"></label>
+                    <textarea asp-for="Observaciones" class="form-control"></textarea>
+                    <span asp-validation-for="Observaciones" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Tipo" class="control-label"></label>
-                <input asp-for="Tipo" class="form-control" />
-                <span asp-validation-for="Tipo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RazonSocial" class="control-label"></label>
-                <input asp-for="RazonSocial" class="form-control" />
-                <span asp-validation-for="RazonSocial" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Apellidos" class="control-label"></label>
-                <input asp-for="Apellidos" class="form-control" />
-                <span asp-validation-for="Apellidos" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nifcif" class="control-label"></label>
-                <input asp-for="Nifcif" class="form-control" />
-                <span asp-validation-for="Nifcif" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control" />
-                <span asp-validation-for="Telefono" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Movil" class="control-label"></label>
-                <input asp-for="Movil" class="form-control" />
-                <span asp-validation-for="Movil" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Direccion" class="control-label"></label>
-                <input asp-for="Direccion" class="form-control" />
-                <span asp-validation-for="Direccion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Cp" class="control-label"></label>
-                <input asp-for="Cp" class="form-control" />
-                <span asp-validation-for="Cp" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Observaciones" class="control-label"></label>
-                <input asp-for="Observaciones" class="form-control" />
-                <span asp-validation-for="Observaciones" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+                <div class="form-group">
+                    <input type="submit" value="Crear" class="btn btn-primary" />
+                </div>
+</form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver al listado</a>
 </div>
 
 @section Scripts {
