--- a/Honcizek/Views/Administrador/Clientes/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Editar";
 }
 
-<h1>Editar</h1>
+<h1>Editar Cliente</h1>
 
-<h4>Cliente</h4>
+<h4>@Model.Nombre @Model.Apellidos</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -95,11 +95,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Observaciones" class="control-label"></label>
-                <input asp-for="Observaciones" class="form-control" />
+                <textarea asp-for="Observaciones" class="form-control"></textarea>
                 <span asp-validation-for="Observaciones" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
