--- a/Honcizek/wwwroot/css/Administrador.css
+++ b/Honcizek/wwwroot/css/Administrador.css
@@ -1,85 +1,4 @@
-﻿/*html, body {
-    height: 100%;
-    margin: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-
-header{
-    height: 10vh;
-    display: table;
-}
-
-header .left-side {
-    display: table-cell;
-    background-color: #001059;
-    min-width: 20vh;
-    width: 10vh;
-    height: inherit;
-}
-
-header .left-side img{
-    width: 10vh;
-}
-
-aside {
-    background-color: #0B1D6E;;
-    min-height: 100%;
-    min-width: 20vh;
-    width: 10vh;
-    position: relative;
-}
-
-aside .menu-option{
-    color:white;
-    padding: 10%;
-}
-
-    aside .menu-option:hover {
-        background-color: #001059;
-        color: #1565C0;
-        cursor: pointer;
-        text-decoration: none;
-    }
-
-    aside a .menu-option a{
-        color: inherit;
-        text-decoration: none;
-    }
-
-    aside a:hover{
-        color: inherit;
-        text-decoration: none;
-    }
-
-aside a .menu-option span {
-    vertical-align: middle;
-}
-
-.content {
-    background-color: #F7F8FC;
-}
-
-.container{
-    max-width: 100%;
-}
-
-footer {
-    position: relative;
-    background-color: #F7F8FC;
-}
-
-
-header .rest-header {
-display: table-cell;
-    background-color: #fff;
-    width: auto;
-    height: inherit;
-}
-
-*/
-html, body {
+﻿html, body {
     height: 100%;
     margin: 0;
     min-height: 100vh;
@@ -153,6 +72,7 @@ section{
     overflow: auto;
     max-height: 93%;
     padding-left: 2vh;
+    padding-right: 2vh;
 }
 
 @media screen and (max-height: 710px) {
