Terminada seccion clientes en administrador

--- a/Honcizek/Views/Administrador/Clientes/Create.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Create.cshtml
@@ -11,6 +11,7 @@
     <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="FechaRegistro" value="@ViewData["hoy"]" />
             <div class="row col-12">
                 <div class="form-group col-4">
                     <label asp-for="Login" class="control-label"></label>
@@ -21,11 +22,6 @@
                     <label asp-for="Clave" class="control-label"></label>
                     <input asp-for="Clave" class="form-control" />
                     <span asp-validation-for="Clave" class="text-danger"></span>
-                </div>
-                <div class="form-group col-4">
-                    <label asp-for="FechaRegistro" class="control-label"></label>
-                    <input asp-for="FechaRegistro" class="form-control" />
-                    <span asp-validation-for="FechaRegistro" class="text-danger"></span>
                 </div>
             </div>
             <div class="row col-12">
@@ -47,23 +43,27 @@
                     <label asp-for="Tipo" class="control-label"></label>
                     <select asp-for="Tipo" class="form-control" asp-items="ViewBag.Tipo"></select>
                 </div>
+            </div>
+            <div class="row col-12 tipo-empresa">
                 <div class="form-group col-4">
                     <label asp-for="RazonSocial" class="control-label"></label>
                     <input asp-for="RazonSocial" class="form-control" />
                     <span asp-validation-for="RazonSocial" class="text-danger"></span>
                 </div>
-                <div class="form-group col-4">
-                    <label asp-for="Nombre" class="control-label"></label>
-                    <input asp-for="Nombre" class="form-control" />
-                    <span asp-validation-for="Nombre" class="text-danger"></span>
-                </div>
+            </div>
+            <div class="row col-12 tipo-persona d-none">
+                    <div class="form-group col-6">
+                        <label asp-for="Nombre" class="control-label"></label>
+                        <input asp-for="Nombre" class="form-control" />
+                        <span asp-validation-for="Nombre" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-6">
+                        <label asp-for="Apellidos" class="control-label"></label>
+                        <input asp-for="Apellidos" class="form-control" />
+                        <span asp-validation-for="Apellidos" class="text-danger"></span>
+                    </div>
             </div>
             <div class="row col-12">
-                <div class="form-group col-4">
-                    <label asp-for="Apellidos" class="control-label"></label>
-                    <input asp-for="Apellidos" class="form-control" />
-                    <span asp-validation-for="Apellidos" class="text-danger"></span>
-                </div>
                 <div class="form-group col-4">
                     <label asp-for="Nifcif" class="control-label"></label>
                     <input asp-for="Nifcif" class="form-control" />
@@ -74,13 +74,13 @@
                     <input asp-for="Telefono" class="form-control" />
                     <span asp-validation-for="Telefono" class="text-danger"></span>
                 </div>
-            </div>
-            <div class="row col-12">
                 <div class="form-group col-4">
                     <label asp-for="Movil" class="control-label"></label>
                     <input asp-for="Movil" class="form-control" />
                     <span asp-validation-for="Movil" class="text-danger"></span>
                 </div>
+            </div>
+            <div class="row col-12">
                 <div class="form-group col-4">
                     <label asp-for="Email" class="control-label"></label>
                     <input asp-for="Email" class="form-control" />
@@ -91,30 +91,35 @@
                     <input asp-for="Direccion" class="form-control" />
                     <span asp-validation-for="Direccion" class="text-danger"></span>
                 </div>
-            </div>
-            <div class="row col-12">
                 <div class="form-group col-4">
                     <label asp-for="Cp" class="control-label"></label>
                     <input asp-for="Cp" class="form-control" />
                     <span asp-validation-for="Cp" class="text-danger"></span>
                 </div>
-                <div class="form-group col-4">
+            </div>
+            <div class="row col-12">
+                <div class="form-group col-6">
                     <label asp-for="Observaciones" class="control-label"></label>
                     <textarea asp-for="Observaciones" class="form-control"></textarea>
                     <span asp-validation-for="Observaciones" class="text-danger"></span>
                 </div>
             </div>
-                <div class="form-group">
-                    <input type="submit" value="Crear" class="btn btn-primary" />
-                </div>
-</form>
+            <div class="form-group text-center">
+                <input type="submit" value="Crear" class="btn btn-info" />
+                <a asp-action="Index">
+                    <button class="btn btn-primary">Volver al listado</button>
+                </a>
+            </div>
+        </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Volver al listado</a>
-</div>
-
 @section Scripts {
+<script type="text/javascript" src="~/js/Administrador/Clientes/Clientes.js"></script>
+<script>
+    $(document).ready(function () {
+        Clientes.init();
+    });
+</script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
