--- a/Honcizek/Views/Administrador/Clientes/Details.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Details.cshtml
@@ -13,108 +13,113 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Login)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Login)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Clave)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Clave)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaRegistro)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.FechaRegistro)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tipo)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Tipo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RazonSocial)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.RazonSocial)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Apellidos)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Apellidos)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nifcif)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Nifcif)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Telefono)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Telefono)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Movil)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Movil)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Direccion)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Direccion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cp)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Cp)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Observaciones)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-4">
             @Html.DisplayFor(model => model.Observaciones)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Localidad)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Localidad.Id)
+        <dd class = "col-sm-4">
+            @Html.DisplayFor(model => model.Localidad.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Pais)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Pais.Id)
+        <dd class = "col-sm-4">
+            @Html.DisplayFor(model => model.Pais.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Provincia)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Provincia.Id)
+        <dd class = "col-sm-4">
+            @Html.DisplayFor(model => model.Provincia.Nombre)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="pb-3">
+    <a asp-action="Edit" asp-route-id="@Model.Id">
+        <button class="btn btn-info">Editar</button>
+    </a>
 </div>
+<a asp-action="Index">
+    <button class="btn btn-primary">Volver al listado</button>
+    </a>
+
