--- a/Honcizek/Views/Administrador/Clientes/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Edit.cshtml
@@ -201,13 +201,15 @@
                     <span asp-validation-for="Observaciones" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group text-center">
+            <div class="form-group pt-2 pl-3">
                 <input type="submit" value="Guardar" class="btn btn-info" />
-                <a asp-action="Index">
-                    <button class="btn btn-primary">Volver al listado</button>
-                </a>
             </div>
         </form>
+        <div class="pt-3 pl-3">
+            <a asp-action="Index">
+                <button class="btn btn-primary">Volver al listado</button>
+            </a>
+        </div>
     </div>
 </div>
 
