--- a/Honcizek/Views/Shared/Administrador.cshtml
+++ b/Honcizek/Views/Shared/Administrador.cshtml
@@ -21,7 +21,7 @@
     <div class="d-flex main">
         <aside class="d-flex flex-column">
             <a asp-controller="Clientes" asp-action="Index">
-                <div class="menu-option">
+                <div class="menu-option Clientes">
                     <span>
                         @*<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
@@ -31,10 +31,33 @@
                     </span>
                 </div>
             </a>
-            <div class="menu-option"><a asp-controller="Clientes" asp-action="Index">Proyectos</a></div>
-            <div class="menu-option"><a asp-controller="Clientes" asp-action="Index">Tickets</a></div>
-            <div class="menu-option"><a asp-controller="Clientes" asp-action="Index">Clientes</a></div>
-            <div class="menu-option"><a asp-controller="Clientes" asp-action="Index">Trabajadores</a></div>
+            <a asp-controller="Clientes" asp-action="Index">
+                <div class="menu-option Proyectos">
+                    <span>Proyectos</span>
+                </div>
+            </a>
+
+            <a asp-controller="Clientes" asp-action="Index">
+                <div class="menu-option Tickets">
+                    <span>
+                        Tickets
+                    </span>
+                </div>
+            </a>
+           <a asp-controller="Clientes" asp-action="Index">
+               <div class="menu-option Suscripciones">
+                   <span>
+                       Suscripciones
+                   </span>
+               </div>
+           </a>
+            <a asp-controller="Clientes" asp-action="Index">
+                <div class="menu-option Trabajadores">
+                    <span>
+                        Trabajadores
+                    </span>
+                </div>
+            </a>
 
         </aside>
             <section>
@@ -50,6 +73,11 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        $(document).ready(function () {
+            console.log("patata");
+        });
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
