--- a/Honcizek/wwwroot/css/Administrador.css
+++ b/Honcizek/wwwroot/css/Administrador.css
@@ -32,30 +32,31 @@ aside {
     position: relative;
 }
 
-    aside .menu-option {
-        color: white;
-        padding: 10%;
-    }
+aside .menu-option {
+    color: white;
+    padding: 10%;
+}
 
-        aside .menu-option:hover {
-            background-color: #001059;
-            color: #1565C0;
-            cursor: pointer;
-        }
+aside .menu-option:hover {
+    background-color: #001059;
+    color: yellow;
+    cursor: pointer;
+}
 
-    aside a .menu-option a {
-        color: inherit;
-        text-decoration: none;
-    }
+aside .active {
+    background-color: #001059;
+    color: yellow;
+}
 
-    aside a:hover .menu-option span {
-        color: inherit;
-        text-decoration: none;
-    }
 
-    aside a .menu-option span {
-        vertical-align: middle;
-    }
+aside a:hover .menu-option span {
+    color: inherit;
+    text-decoration: none;
+}
+
+aside a .menu-option span {
+    vertical-align: middle;
+}
 
 .main {
     min-height: 90%;
@@ -67,12 +68,13 @@ aside {
     min-height: 100%;
 }
 
-section{
-    width:100%;
+section {
+    width: 100%;
     overflow: auto;
     max-height: 93%;
     padding-left: 2vh;
     padding-right: 2vh;
+    scrollbar-color: #D2D2D2 #0B1D6E;
 }
 
 @media screen and (max-height: 710px) {
