--- a/Honcizek/Views/Administrador/Clientes/Index.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Index.cshtml
@@ -11,6 +11,20 @@
         <button class="btn btn-info">Crear nuevo</button>
     </a>
 </p>
+
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Buscar cliente por nombre: <input id="filtro" type="text" name="search" value="@ViewData["CurrentFilter"]" />
+            <input type="submit" value="Buscar" class="btn btn-primary" />
+            <a asp-action="Index" >
+                <button class="btn btn-dark" id="limpia-filtros">
+                    Limpiar filtro
+                </button>
+            </a>
+        </p>
+    </div>
+</form>
 <table>
     <thead>
         <tr>
@@ -45,49 +59,61 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Clave)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaRegistro)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tipo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RazonSocial)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Apellidos)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Telefono)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Movil)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Pais.Nombre)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">
-                    <button class="btn btn-primary">Editar</button>
-                </a>
-                <a asp-action="Details" asp-route-id="@item.Id">
-                    <button class="btn btn-info" >Detalles</button>
-                </a>
-                <a asp-action="Delete" asp-route-id="@item.Id">
-                    <button class="btn btn-danger" >Eliminar</button>
-                </a>
-                
-                
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Clave)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FechaRegistro)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tipo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RazonSocial)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Apellidos)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Telefono)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Movil)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Pais.Nombre)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">
+                        <button class="btn btn-primary">Editar</button>
+                    </a>
+                    <a asp-action="Details" asp-route-id="@item.Id">
+                        <button class="btn btn-info">Detalles</button>
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">
+                        <button class="btn btn-danger">Eliminar</button>
+                    </a>
+
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+
+@section Scripts {
+    <script type="text/javascript" src="~/js/Administrador/Clientes/Clientes.js"></script>
+    <script>
+    $(document).ready(function () {
+        Clientes.init();
+    });
+    </script>
+}
+
