--- a/Honcizek/Views/Shared/Administrador.cshtml
+++ b/Honcizek/Views/Shared/Administrador.cshtml
@@ -31,7 +31,7 @@
                     </span>
                 </div>
             </a>
-            <a asp-controller="Clientes" asp-action="Index">
+            <a asp-controller="Proyectos" asp-action="Index">
                 <div class="menu-option Proyectos">
                     <span>Proyectos</span>
                 </div>
