Maquetado crear proyecto

--- a/Honcizek/Views/Administrador/Clientes/Delete.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Delete.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.FechaRegistro)
         </dt>
         <dd class="col-sm-4">
-            @Html.DisplayFor(model => model.FechaRegistro)
+            @Html.DisplayFor(model => model.Fecha)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Tipo)
