--- a/Honcizek/Views/Administrador/Proyectos/Details.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Details.cshtml
@@ -38,25 +38,25 @@
             @Html.DisplayNameFor(model => model.FechaRegistro)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FechaRegistro)
+            @Html.DisplayFor(model => model.FRegistro)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaInicio)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FechaInicio)
+            @Html.DisplayFor(model => model.Finicio)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaFinPrevista)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FechaFinPrevista)
+            @Html.DisplayFor(model => model.FFinPrevista)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaFinReal)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FechaFinReal)
+            @Html.DisplayFor(model => model.FFin)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HorasInternasPrevistas)
