--- a/Honcizek/Views/Administrador/Proyectos/Create.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Create.cshtml
@@ -9,68 +9,70 @@
 <h4>Proyectos</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Create">
+            <input type="hidden" asp-for="FechaRegistro" value="@ViewData["hoy"]" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class ="form-control" asp-items="ViewBag.ClienteId"></select>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Tipo" class="control-label"></label>
+                    <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.Tipo"></select>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="ClienteId" class="control-label">Cliente</label>
+                    <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Tipo" class="control-label"></label>
-                <input asp-for="Tipo" class="form-control" />
-                <span asp-validation-for="Tipo" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-6">
+                    <label asp-for="Descripcion" class="control-label">Descripci&oacute;n</label>
+                    <textarea asp-for="Descripcion" class="form-control"></textarea>
+                    <span asp-validation-for="Descripcion" class="text-danger"></span>
+                </div>
+                <div class="form-group col-6">
+                    <label asp-for="DescripcionDesarrollo" class="control-label">Descripci&oacute;n del desarrollo</label>
+                    <textarea asp-for="DescripcionDesarrollo" class="form-control"></textarea>
+                    <span asp-validation-for="DescripcionDesarrollo" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="FechaInicio" class="control-label"></label>
+                    <input type="date" asp-for="FechaInicio" class="form-control" />
+                    <span asp-validation-for="FechaInicio" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="FechaFinPrevista" class="control-label"></label>
+                    <input type="date" asp-for="FechaFinPrevista" class="form-control" />
+                    <span asp-validation-for="FechaFinPrevista" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="FechaFinReal" class="control-label"></label>
+                    <input type="date" asp-for="FechaFinReal" class="form-control" />
+                    <span asp-validation-for="FechaFinReal" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
-                <span asp-validation-for="Descripcion" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="HorasInternasPrevistas" class="control-label"></label>
+                    <input asp-for="HorasInternasPrevistas" class="form-control" />
+                    <span asp-validation-for="HorasInternasPrevistas" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Estado" class="control-label"></label>
+                    <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.Estado"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="DescripcionDesarrollo" class="control-label"></label>
-                <input asp-for="DescripcionDesarrollo" class="form-control" />
-                <span asp-validation-for="DescripcionDesarrollo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaRegistro" class="control-label"></label>
-                <input asp-for="FechaRegistro" class="form-control" />
-                <span asp-validation-for="FechaRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaInicio" class="control-label"></label>
-                <input asp-for="FechaInicio" class="form-control" />
-                <span asp-validation-for="FechaInicio" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaFinPrevista" class="control-label"></label>
-                <input asp-for="FechaFinPrevista" class="form-control" />
-                <span asp-validation-for="FechaFinPrevista" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaFinReal" class="control-label"></label>
-                <input asp-for="FechaFinReal" class="form-control" />
-                <span asp-validation-for="FechaFinReal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HorasInternasPrevistas" class="control-label"></label>
-                <input asp-for="HorasInternasPrevistas" class="form-control" />
-                <span asp-validation-for="HorasInternasPrevistas" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
-                <span asp-validation-for="Estado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            <div class="form-group pl-3">
                 <input type="submit" value="Crear" class="btn btn-info" />
             </div>
         </form>
-        <div class="pt-3">
+        <div class="pt-3 pl-3">
             <a asp-action="Index">
                 <button class="btn btn-primary">Volver al listado</button>
             </a>
