--- a/Honcizek/Views/Administrador/Proyectos/Delete.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Delete.cshtml
@@ -11,78 +11,78 @@
     <h4>Proyectos</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Tipo)
         </dt>
-        <dd class = "col-sm-4">
+        <dd class="col-sm-4">
             @Html.DisplayFor(model => model.Tipo)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
-        <dd class = "col-sm-4">
+        <dd class="col-sm-4">
             @Html.DisplayFor(model => model.Nombre)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
-        <dd class = "col-sm-4">
+        <dd class="col-sm-4">
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DescripcionDesarrollo)
         </dt>
-        <dd class = "col-sm-4">
+        <dd class="col-sm-4">
             @Html.DisplayFor(model => model.DescripcionDesarrollo)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FechaRegistro)
         </dt>
-        <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FechaRegistro)
+        <dd class="col-sm-4">
+            @Html.DisplayFor(model => model.FRegistro)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FechaInicio)
         </dt>
-        <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FechaInicio)
+        <dd class="col-sm-4">
+            @Html.DisplayFor(model => model.Finicio)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FechaFinPrevista)
         </dt>
-        <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FechaFinPrevista)
+        <dd class="col-sm-4">
+            @Html.DisplayFor(model => model.FFinPrevista)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FechaFinReal)
         </dt>
-        <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FechaFinReal)
+        <dd class="col-sm-4">
+            @Html.DisplayFor(model => model.FFin)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.HorasInternasPrevistas)
         </dt>
-        <dd class = "col-sm-4">
+        <dd class="col-sm-4">
             @Html.DisplayFor(model => model.HorasInternasPrevistas)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Estado)
         </dt>
-        <dd class = "col-sm-4">
+        <dd class="col-sm-4">
             @Html.DisplayFor(model => model.Estado)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Fase)
         </dt>
-        <dd class = "col-sm-4">
+        <dd class="col-sm-4">
             @Html.DisplayFor(model => model.Fase)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
-        <dd class = "col-sm-4">
+        <dd class="col-sm-4">
             @Html.DisplayFor(model => model.Cliente.Tipo)
-        </dd class>
+        </dd>
     </dl>
     
     <form class="pb-3" asp-action="Delete">
